# API-In-Three-Ways

GraphQL/: pyproject.toml
GraphQL/GraphQL_Example/: db.sqlite3  manage.py
GraphQL/GraphQL_Example/GraphQL_Example/: asgi.py  settings.py  urls.py  wsgi.py
REST/: README.md
REST/TS/: .gitignore  index.js  index.ts  package-lock.json  package.json
REST/TS/prisma/: schema.prisma
REST/TS/prisma/migrations/20221220021257_init/: migration.sql
