[tool.poetry]
name = "api-in-three-ways-gql"
version = "0.1.0"
description = ""
authors = ["Favour Oshiokhale <89757138+afoshiok@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "api_in_three_ways_gql"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
